Cards correcttion no overflow

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -24,9 +24,10 @@
   /* top: 50%;
   left: 50%; */
   /* transform: translate(-50%,-50%); */
-  /* width: 360px;
-  height: 400px; */
+  width: 360px;
+  height: 400px;
   background: #000;
+  z-index: 1;
 }
 .card .image {
   width: 100%;
@@ -42,6 +43,7 @@
   transform: translateX(30%);/*100%*/
 }
 .card .details {
+  overflow: hidden;
   position: absolute;
   top: 0;
   left: 0;
@@ -51,6 +53,7 @@
   transition: .5s;
   transform-origin: left;
   transform: perspective(2000px) rotateY(-90deg);
+  z-index: 2;
 }
 .card:hover .details {
   transform: perspective(2000px) rotateY(0deg);
@@ -62,6 +65,7 @@
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
+  z-index: 2;
 }
 .card .details .center h1 {
   margin: 0;
@@ -102,4 +106,10 @@
 }
 .card .details .center ul li a:hover {
   background: #ff3636;
+}
+
+.description-content {
+  height: 100px;
+  max-width: 80%;
+  overflow: hidden;
 }
